# dsp-iron-whale

./: .gitignore  BSGDelay.filtergraph  BSGDelayMacOS.filtergraph  CMakeLists.txt
GUI/: DefaultSkin.cpp  DefaultSkin.h  RotaryDial.cpp  RotaryDial.h
Source/: CircularBuffer.cpp  CircularBuffer.h  DelayDSP.cpp  DelayDSP.h  GainDSP.cpp  GainDSP.h  OutputGainDSP.cpp  OutputGainDSP.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DelayDSP.cpp
Source/GUI/: DefaultSkin.cpp  DefaultSkin.h  RotaryDial.cpp  RotaryDial.h
Source/Utils/: ParameterUtils.cpp
Tests/: CircularBufferTest.cpp  DelayDSPTest.cpp
Utils/: ParameterUtils.cpp  ParameterUtils.h
